--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -1,15 +1,14 @@
-
 .normal {
   font-family: Georgia, sans-serif;
   text-align: center;
 }
 
 .title {
-  font-size: 2.5rem;
+  margin: 0;
+  padding: 0.6em 0;
+  color: white;
   font-weight: normal;
+  font-size: 2.5rem;
   letter-spacing: -1px;
   background: darkslateblue;
-  padding: .6em 0;
-  color: white;
-  margin: 0;
 }
